@@ -40,12 +40,12 @@ enum arg_type {
 	ARGTYPE_FILE,
 	ARGTYPE_FORMAT,     /* printf-like format */
 	ARGTYPE_STRING,
-	ARGTYPE_STRING0,    /* stringN: string up to (arg N) bytes */
-	ARGTYPE_STRING1,
-	ARGTYPE_STRING2,
-	ARGTYPE_STRING3,
-	ARGTYPE_STRING4,
-	ARGTYPE_STRING5
+	ARGTYPE_STRINGN,
+};
+
+struct complete_arg_type {
+	enum arg_type at;
+	int argno;		/* for STRINGN */
 };
 
 enum tof {
@@ -58,9 +58,9 @@ enum tof {
 
 struct function {
 	const char * name;
-	enum arg_type return_type;
+	struct complete_arg_type return_type;
 	int num_params;
-	enum arg_type arg_types[MAX_ARGS];
+	struct complete_arg_type arg_types[MAX_ARGS];
 	int params_right;
 	struct function * next;
 };
@@ -142,7 +142,7 @@ extern void * instruction_pointer;
 extern struct event * wait_for_something(void);
 extern void process_event(struct event * event);
 extern void execute_program(struct process *, char **);
-extern int display_arg(enum tof type, struct process * proc, int arg_num, enum arg_type at);
+extern int display_arg(enum tof type, struct process * proc, int arg_num, const struct complete_arg_type *at);
 extern struct breakpoint * address2bpstruct(struct process * proc, void * addr);
 extern void breakpoints_init(struct process * proc);
 extern void insert_breakpoint(struct process * proc, void * addr);
